horizontal scroll on mobile fixed

--- a/css/main.scss
+++ b/css/main.scss
@@ -977,6 +977,8 @@ section {
             @media (max-width: 991px) {
                 right: auto;
                 left: 0;
+                font-size: 8.0rem;
+
             }
         }
 
@@ -1069,6 +1071,7 @@ section {
             @media (max-width: 991px) {
                 top: 10px;
                 line-height: 1.1;
+                font-size: 5.5rem;
             }
 
         }
@@ -1412,6 +1415,7 @@ section {
 
             span {
                 top: .1em;
+                font-size: 6rem;
 
             }
         }
@@ -1640,6 +1644,7 @@ section {
 
             @media (max-width: 991px) {
                 top: 10px;
+                font-size: 6rem;
             }
         }
 
